--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,14 @@
 </div>
 
 <div>
-  <button (click)="onButtonClick()">Generate</button>
+  <button
+    (click)="onButtonClick()"
+    [disabled]="
+      !(length && (includeLetters || includeNumbers || includeSymbols))
+    "
+  >
+    Generate
+  </button>
 </div>
 
 <div>
